/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package org.apache.dubbogo.samples.shop.detail.api;

option go_package = "./;api";

service Detail {
  rpc GetItem(GetItemReq) returns (Item){};
  rpc DeductStock(DeductStockReq) returns (DeductStockResp){};
}

message Item {
  int64 Sku = 1;
  string ItemName = 2;
  string Description = 3;
  int32 Stock = 4;
  int64 Price = 5;
  string Comment = 6;

}

message GetItemReq {
  int64 Sku = 1;
  string UserName = 2;
}

message DeductStockReq {
  int64 Sku = 1;
  int32 Count = 2;
}

message DeductStockResp {
  bool Success = 1;
}